ssd1306_oled_test/build/log/idf_py_stdout_output_14052
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\Esp-idf\Esp32MCU_jigaku\ssd1306_oled_test\build\bootloader\esp-idf\esptool_py && D:\Esp-idf\Espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe D:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/Esp-idf/Esp32MCU_jigaku/ssd1306_oled_test/build/bootloader/bootloader.bin"
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache D:\Esp-idf\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Esp-idf/Esp32MCU_jigaku/ssd1306_oled_test/build/config -ID:/Esp-idf/Esp32MCU_jigaku/ssd1306_oled_test/main -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/newlib/platform_include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/freertos/config/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/freertos/config/include/freertos -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/freertos/config/xtensa/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/freertos/FreeRTOS-Kernel/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/freertos/esp_additions/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_hw_support/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_hw_support/include/soc -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_hw_support/include/soc/esp32 -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_hw_support/port/esp32/. -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/heap/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/log/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/soc/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/soc/esp32 -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/soc/esp32/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/hal/platform_port/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/hal/esp32/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/hal/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_rom/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_rom/include/esp32 -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_rom/esp32 -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_common/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_system/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_system/port/soc -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_system/port/include/private -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/xtensa/esp32/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/xtensa/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/xtensa/deprecated_include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/lwip/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/lwip/include/apps -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/lwip/include/apps/sntp -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/lwip/lwip/src/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/lwip/port/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/lwip/port/freertos/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/lwip/port/esp32xx/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/lwip/port/esp32xx/include/arch -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/lwip/port/esp32xx/include/sys -ID:/Esp-idf/Esp32MCU_jigaku/ssd1306_oled_test/components/ssd1306/src -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/deprecated -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/analog_comparator/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/dac/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/gpio/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/gptimer/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/i2c/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/i2s/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/ledc/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/mcpwm/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/parlio/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/pcnt/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/rmt/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/sdio_slave/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/sdmmc/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/sigma_delta/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/spi/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/temperature_sensor/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/touch_sensor/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/twai/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/uart/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/usb_serial_jtag/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/driver/touch_sensor/esp32/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_pm/include -ID:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/Esp-idf/Esp32MCU_jigaku/ssd1306_oled_test=. -fmacro-prefix-map=D:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c D:/Esp-idf/Esp32MCU_jigaku/ssd1306_oled_test/main/main.c
D:/Esp-idf/Esp32MCU_jigaku/ssd1306_oled_test/main/main.c: In function 'app_main':
D:/Esp-idf/Esp32MCU_jigaku/ssd1306_oled_test/main/main.c:33:5: warning: 'ssd1306_init' is deprecated [-Wdeprecated-declarations]
   33 |     ESP_ERROR_CHECK(ssd1306_init());
      |     ^~~~~~~~~~~~~~~
In file included from D:/Esp-idf/Esp32MCU_jigaku/ssd1306_oled_test/components/ssd1306/src/ssd1306.h:39,
                 from D:/Esp-idf/Esp32MCU_jigaku/ssd1306_oled_test/main/main.c:5:
D:/Esp-idf/Esp32MCU_jigaku/ssd1306_oled_test/components/ssd1306/src/lcd/oled_ssd1306.h:104:14: note: declared here
  104 | void         ssd1306_init(void) __attribute__((deprecated));
      |              ^~~~~~~~~~~~
In file included from D:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_hw_support/include/esp_intr_alloc.h:12,
                 from D:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_hw_support/include/esp_cpu.h:20,
                 from D:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_hw_support/include/spinlock.h:11,
                 from D:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:49,
                 from D:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:57,
                 from D:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:69,
                 from D:/Esp-idf/Esp32MCU_jigaku/ssd1306_oled_test/main/main.c:2:
D:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_common/include/esp_err.h:117:29: error: void value not ignored as it ought to be
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                             ^
D:/Esp-idf/Esp32MCU_jigaku/ssd1306_oled_test/main/main.c:33:5: note: in expansion of macro 'ESP_ERROR_CHECK'
   33 |     ESP_ERROR_CHECK(ssd1306_init());
      |     ^~~~~~~~~~~~~~~
D:/Esp-idf/Espressif/frameworks/esp-idf-v5.2.3/components/esp_common/include/esp_err.h:117:29: error: void value not ignored as it ought to be
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                             ^
D:/Esp-idf/Esp32MCU_jigaku/ssd1306_oled_test/main/main.c:36:5: note: in expansion of macro 'ESP_ERROR_CHECK'
   36 |     ESP_ERROR_CHECK(ssd1306_clearScreen());
      |     ^~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
